# codex-session-keeper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: cli-reference.md  new-device-use-old-sessions.md  portable-cheatsheet.md  same-device-old-relay-to-new-relay.md  switch-account-keep-session.md  web-ui.md
scripts/: backup-codex-state.ps1  backup-codex-state.sh  export-codex-sessions.ps1  export-codex-sessions.sh  import-codex-sessions.ps1  import-codex-sessions.sh
src/codex_session_keeper/: __init__.py  cli.py  sessions.py  webapp.py
tests/: test_cli.py
