[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-keeper"
version = "0.1.0"
description = "Keep and resume Codex sessions across API key, relay, and device switches."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Codex Session Keeper contributors" }
]
keywords = ["codex", "sessions", "migration", "relay", "api-key"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.scripts]
codex-session-keeper = "codex_session_keeper.cli:main"
csk = "codex_session_keeper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
